Facebook share image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://www.matotenis.sk" />
     <meta property="og:title" content="matotenis.sk" />
     <meta property="og:description" content="Majstrovstvá Topoľčian v tenise" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="<%= URI.join(root_url, image_path("matotenis_facebook2.jpg")) %>" />
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
