Facebook share image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:url" content="https://www.matotenis.sk" />
+    <meta property="og:url" content="<%= root_url %>" />
     <meta property="og:title" content="matotenis.sk" />
     <meta property="og:description" content="Majstrovstvá Topoľčian v tenise" />
     <meta property="og:image" content="<%= URI.join(root_url, image_path("matotenis_facebook2.jpg")) %>" />
