--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,18 +13,21 @@
     <div class="col-xs-12 col-md-6">
       <div class="mt-1 py-4">
         <p class="text-center">
-          Viac info
+          Organizačný tím
         </p>
         <p class="text-center">
           <small>
-      			Ondrej Babala<br>
-            Milan Kyseľ<br>
-            Andrej Golej
+      			Tomáš Radič<br>
+            <%= link_to 'tomas.radic@gmail.com', 'mailto:tomas.radic@gmail.com' %><br>
+            <%= link_to '0905 289 248', 'tel:0905289248' %>
           </small>
         </p>
         <p class="text-center">
-          <%= link_to_manager_phone %>
-    		</p>
+          <small>
+            Ondrej Babala<br>
+            <%= link_to_manager_phone %>
+          </small>
+        </p>
       </div>
     </div>
     <div class="col-xs-12 col-md-6">
