--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,9 +19,9 @@
         <li class="nav-item">
           <%= link_to 'O súťaži', pages_about_path, class: 'nav-link'  %>
         </li>
-        <li class="nav-item">
-          <%= link_to 'Sezóna 2020', pages_season2020_path, class: 'nav-link'  %>
-        </li>
+<!--        <li class="nav-item">-->
+          <%#= link_to 'Sezóna 2020', pages_season2020_path, class: 'nav-link'  %>
+<!--        </li>-->
       </ul>
       <ul class="navbar-nav">
         <% if user_signed_in? %>
