--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -10,6 +10,9 @@
 </div>
 
 <hr>
+<h1 class="display-3 text-center pb-4">
+  Začína sezóna <strong>2020!</strong>
+</h1>
 <% if @enrollments.any? %>
   <div class="row">
     <div class="col">
