Added special instruction to banner

--- a/app/views/shared/_special_instructions.html.erb
+++ b/app/views/shared/_special_instructions.html.erb
@@ -30,6 +30,7 @@
                     "http://www.uvzsr.sk/docs/info/covid19/Usmernenie_hlavneho_hygienika_SR_sportoviska.pdf",
                     target: :_blank %>
       </li>
+      <li>Letuška, nebozkávaj prosím každého koho stretneš O:-)</li>
     </ul>
   </p>
 
