Changed about page text

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -89,8 +89,8 @@
     <p class="text-justify">
       <i>
         Organizátor súťaže môže pre zatraktívnenie, alebo zefektívnenie súťaže urobiť výnimky v žrebovaní, alebo
-        priraďovaní hráčov na zápasy, ak si to situácia z nejakých dôvodov vyžaduje. Prvé a druhé kolo súťaže bude žrebované
-        ťahaním lístočkov so zapojením všetkých prítomných hráčov.
+        priraďovaní hráčov na zápasy, ak si to situácia z nejakých dôvodov vyžaduje. <s>Prvé a druhé kolo súťaže bude žrebované
+        ťahaním lístočkov so zapojením všetkých prítomných hráčov.</s>
       </i>
     </p>
 
