Season heading style changed

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -116,6 +116,11 @@ a.quiet-link {
   color: white;
 }
 
+.bg-black {
+  background-color: #000000;
+  color: white;
+}
+
 .attention-background {
   animation: attention 3s infinite;
   -webkit-animation: attention 3s infinite;
