--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -11,7 +11,7 @@
 
 <hr>
 <h1 class="display-3 text-center pb-4">
-  Začína sezóna <strong>2020!</strong>
+  Začína sezóna <span class="px-4 bg-black"><strong>2020!</strong></span>
 </h1>
 <% if @most_recent_article.present? %>
   <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article %></div>
