--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Majstrovstvá Topoľčian v tenise" />
     <meta property="og:image" content="<%= URI.join(root_url, image_path("matotenis_facebook2.jpg")) %>" />
 
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
