--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -41,14 +41,14 @@
 <p class="lead text-center">
   <%= player_name_link(@match.player1, current_user, false) %>
   <% if user_signed_in? || @match.player1.consent_given? %>
-    <i>(tel.č. <%= link_to "#{@match.player1.phone}", "tel:#{@match.player1.phone}" %>)</i>
+    <i>(tel.č. <%= link_to "#{formatted_phone(@match.player1.phone)}", "tel:#{@match.player1.phone}" %>)</i>
   <% end %>
   <b>zabezpečuje <i>kurt</i></b>.
 </p>
 <p class="lead text-center">
   <%= player_name_link(@match.player2, current_user, false) %>
   <% if user_signed_in? || @match.player2.consent_given? %>
-    <i>(tel.č. <%= link_to "#{@match.player2.phone}", "tel:#{@match.player2.phone}" %>)</i>
+    <i>(tel.č. <%= link_to "#{formatted_phone(@match.player2.phone)}", "tel:#{@match.player2.phone}" %>)</i>
   <% end %>
   <b>zabezpečuje <i>lopty</i></b>.
 </p>
