--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -21,15 +21,19 @@
 
   <div class="row">
     <div class="col-lg-6">
-      <div class="field form-group">
-        <%= form.label :phone, 'Telefónne číslo' %><br />
-        <%= form.text_field :phone, value: formatted_phone(@player.phone), class: 'form-control' %>
+      <div class="<%= add_error_class_to('pl-2', @player, :phone) %>">
+        <div class="field form-group">
+          <%= form.label :phone, 'Telefónne číslo' %><br />
+          <%= form.text_field :phone, class: 'form-control' %>
+        </div>
       </div>
     </div>
     <div class="col-lg-6">
-      <div class="field form-group">
-        <%= form.label :email, 'Email' %><br />
-        <%= form.email_field :email, class: 'form-control' %>
+      <div class="<%= add_error_class_to('pl-2', @player, :email) %>">
+        <div class="field form-group">
+          <%= form.label :email, 'Email' %><br />
+          <%= form.email_field :email, class: 'form-control' %>
+        </div>
       </div>
     </div>
   </div>
