Changed position of graph legend

--- a/app/views/players/_scripts_googlecharts.html.erb
+++ b/app/views/players/_scripts_googlecharts.html.erb
@@ -31,7 +31,8 @@
 
     var options = {
       colors: ['#28a745', '#e0440e'],
-      pieSliceText: 'none'
+      pieSliceText: 'none',
+      legend: { alignment: 'center', position: 'top' }
     };
     var chart = new google.visualization.PieChart(document.getElementById(elementId));
 
