Changed position of graph legend

--- a/app/views/players/_scripts_googlecharts.html.erb
+++ b/app/views/players/_scripts_googlecharts.html.erb
@@ -32,7 +32,7 @@
     var options = {
       colors: ['#28a745', '#e0440e'],
       pieSliceText: 'none',
-      legend: { alignment: 'center', position: 'top' }
+      legend: { alignment: 'center', position: 'top', maxLines: 4 }
     };
     var chart = new google.visualization.PieChart(document.getElementById(elementId));
 
