--- a/app/views/articles/_tile.html.erb
+++ b/app/views/articles/_tile.html.erb
@@ -13,10 +13,7 @@
     </div>
     <p class="card-text <%= 'text-secondary' unless article.published? %>">
       <% if article.published? %>
-        <%= simple_format(article.content[0...ArticlesHelper::PREVIEW_CONTENT_MAX_LENGTH]) %>
-        <% if article.content.length > ArticlesHelper::PREVIEW_CONTENT_MAX_LENGTH %>
-          ... <%= link_to('(dočítať celé)', article_path(article)) %>
-        <% end %>
+        <%= simple_format(tile_content_for(article)) %>
       <% else %>
         <span class="text-secondary">(NEZVEREJNENÉ)</span>
       <% end %>
