Changed button label

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -16,7 +16,7 @@
         <% end %>
         <% if policy(@match).finish? %>
           <button type="button" class="btn btn-outline-danger my-1" data-toggle="modal" data-target="#finish-match-modal">
-            Finalizovať
+            Výsledok
           </button>
         <% end %>
       <% end %>
