Approved balls information changed on pages

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -42,7 +42,7 @@
         Po dohodnutí zápasu informujte organizátora o mieste a čase dohodnutého zápasu správou
         na číslo 0905 289 248, alebo 0908 304 473.
       </strong>
-      Oficiálnymi loptami súťaže sú <strong>Dunlop Fort, Head ATP a Slazenger Wimbledon</strong>.
+      Oficiálnymi loptami súťaže sú <strong>Dunlop Fort, Dunlop ATP, Head ATP a Slazenger Wimbledon</strong>.
       Iné lopty možno použiť len so súhlasom súpera.
       Podľa pravidiel súťaže sa <strong>každý zápas hrá s úplne novými loptami</strong>.
       <p class="text-center"><button class="btn btn-success btn-sm mt-3" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">Ok</button></p>
