--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -26,7 +26,7 @@
     <p class="text-justify">
       Hráč napísaný v zápase ako prvý vyberie, zarezervuje a zaplatí kurt, na ktorom sa zápas odohrá.
       Hráč napísaný ako druhý prinesie na zápas <strong><u>nové</u></strong> lopty. Každý hráč bude približne rovnaký počet
-      krát napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú DUNLOP FORT, HEAD ATP a Slazenger Wimbledon.
+      krát napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú Dunlop Fort, Dunlop ATP, Head ATP a Slazenger Wimbledon.
       <strong>Iné lopty možno použiť len so súhlasom súpera</strong>.
     </p>
     <p class="text-justify">
