Changed season heading

--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -10,9 +10,9 @@
 </div>
 
 <hr>
-<h1 class="display-3 text-center pb-4">
-  Začína sezóna <span class="px-4 bg-black"><strong>2020!</strong></span>
-</h1>
+<!--<h1 class="display-3 text-center pb-4">-->
+<!--  Začína sezóna <span class="px-4 bg-black"><strong>2020!</strong></span>-->
+<!--</h1>-->
 <% if @most_recent_article.present? %>
   <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article %></div>
 <% end %>
