--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -1,8 +1,8 @@
-<%= render 'shared/validation_errors_announcement', validated_object: category %>
-<%= form_with(model: category, local: true) do |form| %>
+<%= render 'shared/validation_errors_announcement', validated_object: place %>
+<%= form_with(model: place, local: true) do |form| %>
   <div class="row">
     <div class="col">
-      <div class="<%= add_error_class_to('pl-2', category, :name) %>">
+      <div class="<%= add_error_class_to('pl-2', place, :name) %>">
         <div class="field form-group">
           <%= form.label :name, 'Názov' %><br />
           <%= form.text_field :name, autofocus: true, class: 'form-control' %>
@@ -16,7 +16,7 @@
       <div class="pl-2">
         <div class="actions">
           <%= submit_tag 'Potvrdiť', class: 'btn btn-lg btn-success my-1' %>
-          <%= link_to 'Zrušiť', categories_path, class: 'btn btn-lg btn-outline-success my-1' %>
+          <%= link_to 'Zrušiť', places_path, class: 'btn btn-lg btn-outline-success my-1' %>
         </div>
       </div>
     </div>
