--- a/app/views/matches/_table_row.html.erb
+++ b/app/views/matches/_table_row.html.erb
@@ -56,10 +56,7 @@
     </small>
   </td>
   <td>
-    <%= I18n.l(match.finished_at&.to_date || match.play_date, format: :date_month) if match.finished_at || match.play_date %>
-  </td>
-  <td>
-    <%= match.note %>
+    <%= match_info(match) %>
   </td>
   <td>
     <%= MatchDecorator.new(match).score %>
