--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -28,8 +28,26 @@
         <div class="col-lg-6">
           <div class="pl-2">
             <div class="form-group">
-              <%= form.label :play_date, 'Dátum zápasu' %><br />
+              <%= form.label :play_date, 'Dátum' %><br />
               <%= form.date_field :play_date, class: 'form-control' %>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="pl-2">
+            <div class="form-group">
+              <%= form.label :play_time, 'Čas' %><br />
+              <%= form.select :play_time, Match.play_times.keys, { include_blank: "Žiadny čas" }, { class: "form-control" } %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="pl-2">
+            <div class="form-group">
+              <%= form.label :place, "Miesto" %>
+              <%= form.select :place_id, options_from_collection_for_select(Place.all, :id, :name), { include_blank: 'Žiadne miesto' }, { class: 'form-control new-player-control' } %>
             </div>
           </div>
         </div>
