--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,6 +34,7 @@
               <%= link_to 'Hráči', enrollments_path, class: 'dropdown-item'  %>
               <%= link_to 'Novinky', articles_path, class: 'dropdown-item'  %>
               <%= link_to 'Kategórie', categories_path, class: 'dropdown-item'  %>
+              <%= link_to 'Miesta', places_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
               <%= link_to 'Kredit', payments_path, class: 'dropdown-item' %>
             </div>
