--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -9,7 +9,9 @@
         <div class="col-lg-6">
           <div class="pl-2">
             <div class="form-group">
-              <%= form.label :play_date, 'Dátum zápasu' %><br />
+              <%= form.label :play_date, 'Dátum zápasu' %>
+              <%= button_tag 'zrušiť dátum', type: 'button', class: 'btn btn-sm btn-warning float-right', id: 'cancel-date-btn' %>
+              <br/>
               <%= form.date_field :play_date, class: 'form-control' %>
             </div>
           </div>
@@ -63,3 +65,5 @@
   </div>
   <div class="col-md-3 hidden-sm-down"></div>
 </div>
+
+<%= render 'matches/scripts' %>
