--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -56,7 +56,11 @@
             <td><%= i + 1 %></td>
             <td>
               <span class="js-filterable">
-                <%= player_name_link(ranking[:player], current_user) %>
+                <% if ranking[:player_enrollment_active] %>
+                  <%= player_name_link(ranking[:player], current_user) %>
+                <% else %>
+                  <s><%= player_name_link(ranking[:player], current_user) %></s>
+                <% end %>
               </span>
             </td>
             <td><%= ranking[:player].category.name %></td>
