Changed round full_label

--- a/app/views/rounds/edit.html.erb
+++ b/app/views/rounds/edit.html.erb
@@ -3,6 +3,12 @@
   <div class="col">
     <h2><%= @heading %></h2>
     <hr>
+    <div class="row">
+      <div class="col">
+        <%= "Pozícia v sezóne - #{@round.position}" %>
+      </div>
+    </div>
+    <hr>
     <%= render 'form', round: @round %>
   </div>
   <div class="col-md-3 hidden-sm-down"></div>
