--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -15,6 +15,10 @@
       <table class="table table-sm narrow">
         <tbody>
           <tr>
+            <td><strong>Poradie v sezóne</strong></td>
+            <td><%= @round.position %></td>
+          </tr>
+          <tr>
             <td><strong>Označenie</strong></td>
             <td><%= maybe_missing(@round.label) %></td>
           </tr>
