Changed match instructions

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -43,6 +43,9 @@
       Oficiálnymi loptami súťaže sú <strong>Dunlop Fort, Dunlop ATP, Head ATP a Slazenger Wimbledon</strong>.
       Iné lopty možno použiť len so súhlasom súpera.
       Podľa pravidiel súťaže sa <strong>každý zápas hrá s úplne novými loptami</strong>.
+      Ak zápas dospeje do stavu 1:1 na sety, o víťazovi rozhoduje supertiebreak (tiebreak, ktorý
+      sa hrá do 10 s rozdielom minimálne dvoch bodov). <strong>Ak obaja hráči súhlasia a majú
+      dostatočne veľkú časovú rezervu</strong>, môžu na rozhodnutie zápasu odohrať štandardný tretí set.
       <p class="text-center"><button class="btn btn-success btn-sm mt-3" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">Ok</button></p>
       <p class="text-center"><%= link_to 'viac info', pages_about_path, class: 'text-center' %></p>
     </small>
