--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -14,7 +14,7 @@
 <!--  Začína sezóna <span class="px-4 bg-black"><strong>2020!</strong></span>-->
 <!--</h1>-->
 <% if @most_recent_article.present? %>
-  <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article %></div>
+  <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article, expand_content: true %></div>
 <% end %>
 <% if @enrollments.any? %>
   <div class="row">
