--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -20,7 +20,7 @@
 <%= render "seasons/heading", season: selected_season %>
 
 <% if @most_recent_article.present? %>
-  <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article %></div>
+  <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article, expand_content: true %></div>
 <% end %>
 
 <p class="text-center">
