--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -15,7 +15,7 @@
 <%= render "seasons/heading", season: selected_season %>
 
 <% if @most_recent_article.present? %>
-  <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article %></div>
+  <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article, expand_content: true %></div>
 <% end %>
 
 <% if @rankings.any? %>
