Changed page autoreload - after stopped scrolling

--- a/app/views/shared/_scripts_autoreload.html.erb
+++ b/app/views/shared/_scripts_autoreload.html.erb
@@ -1,14 +1,24 @@
 <script type="text/javascript">
+  var timer = null;
   var pageLoadedAt = $.now();
-  var reloadingNow = false;
 
   $(document).on('turbolinks:load', function() {
 
+    // Consider page reload after stopped page scrolling
     $(window).scroll(function() {
-      if (!reloadingNow && ($.now() - pageLoadedAt > 7200000)) { // two hours
-        reloadingNow = true;
-        location.reload();
+      if (timer !== null) {
+        clearTimeout(timer);
       }
+
+      timer = setTimeout(considerPageReload, 500);
     });
   });
+
+  function considerPageReload() {
+    if ($.now() - pageLoadedAt > 7200000) { // two hours
+      location.reload();
+    }
+
+    timer = null;
+  }
 </script>
