Changed about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -40,7 +40,7 @@
     <p>
       <ul>
         <li>
-          Neregistrovaní (alebo registrovaní vo veku 35 rokov a viac)
+          Neregistrovaní (aj registrovaní hráči, ktorí sa registrovali až vo veku viac ako 18 rokov)
         </li>
         <li>
           60 roční a starší
@@ -49,7 +49,7 @@
           50 roční a starší
         </li>
         <li>
-          Registrovaní a bývalí registrovaní
+          Registrovaní (aj bývalí registrovaní, ktorí mali registráciu vo veku do 18 rokov)
         </li>
         <li>
           Ženy
